<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thalisson.android.projectw.activity.EditData"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/bt_edit"
        android:gravity="center" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mad_razaoSocial"
                android:labelFor="@id/create_razaoSocial"/>
            <EditText
                android:id="@+id/create_razaoSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mad_nomeFantasia"
                android:labelFor="@id/create_nomeFantasia"/>
            <EditText
                android:id="@+id/create_nomeFantasia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mad_CNPJ"
                android:labelFor="@id/create_cnpj"/>
            <EditText
                android:id="@+id/create_cnpj"
                android:maxLength="14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mad_telefone"
                android:labelFor="@id/create_cnpj"
                android:inputType="number"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/create_ddd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="2"
                    android:minEms="3"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/create_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mad_site"
                android:labelFor="@id/create_site"/>
            <EditText
                android:id="@+id/create_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_edit"
                android:onClick="editar"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
